# mtrl

./: .gitignore  README.md  hello.py  pyproject.toml
experiments/: example.py  mt10_care.py  mt10_care_v1.py  mt10_care_v1_no_gcrl.py  mt10_film.py  mt10_film_v1.py  mt10_moore.py  mt10_moore_v1_task_weights_false.py  mt10_moore_v1_task_weights_true.py  mt10_mtmhsac.py  mt10_mtmhsac_gradnorm.py  mt10_mtmhsac_paco_v1_params_3_layers.py  mt10_mtmhsac_paco_v1_params_4_layers.py  mt10_mtmhsac_paco_v2_params_3_layers.py  mt10_mtmhsac_paco_v2_params_3_layers_use_task_weights.py  mt10_mtmhsac_paco_v2_params_4_layers.py  mt10_mtmhsac_paco_v2_params_4_layers_skip_connections.py  mt10_mtmhsac_v1_moore_params_3_layers.py  mt10_mtmhsac_v1_moore_params_3_layers_use_task_weights.py  mt10_mtmhsac_v1_moore_params_4_layers_use_task_weights_false.py  mt10_mtmhsac_v1_moore_params_4_layers_use_task_weights_true.py  mt10_mtmhsac_v1_no_grad_clip_exponential.py  mt10_mtmhsac_v1_no_grad_clip_exponential_use_task_weights.py  mt10_mtmhsac_v1_soft_modules_params_3_layers.py  mt10_mtmhsac_v1_soft_modules_params_4_layers.py  mt10_mtmhsac_v1_soft_modules_params_4_layers_use_task_weights.py  mt10_mtmhsac_v2_2048.py  mt10_mtmhsac_v2_4096.py  mt10_mtmhsac_v2_8192.py  mt10_mtmhsac_v2_moore_params.py  mt10_mtmhsac_v2_moore_params_3_layers_use_task_weights.py  mt10_mtmhsac_v2_moore_params_4_layers_use_task_weights.py  mt10_mtmhsac_v2_soft_modules_params_3_layers.py  mt10_mtmhsac_v2_soft_modules_params_3_layers_use_task_weights.py  mt10_mtmhsac_v2_soft_modules_params_4_layers.py  mt10_mtmhsac_v2_soft_modules_params_4_layers_use_task_weights.py  mt10_mtsac.py  mt10_paco.py  mt10_paco_v1_task_weights_true.py  mt10_pcgrad.py  (+8 more)
mtrl/: checkpoint.py  experiment.py  metrics.py  types.py
plots/: design_system.py  export_all.sh  fig1.py  fig1_new.py  fig2.py  fig3.py  fig4.py  fig4_1.py  (+6 more)
(+72 files in other folders)
